[gd_scene load_steps=17 format=2]

[ext_resource path="res://Game/Game.gd" type="Script" id=1]
[ext_resource path="res://Card_Images/UNO_53.png" type="Texture" id=2]
[ext_resource path="res://Game/Mouse_Pointer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Pile.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Other_Images/screenshot.png" type="Texture" id=6]
[ext_resource path="res://Other_Images/arrow.png" type="Texture" id=7]
[ext_resource path="res://Themes/Waiting_Room.tres" type="Theme" id=8]
[ext_resource path="res://Game/Chat.tscn" type="PackedScene" id=9]
[ext_resource path="res://Menus/Options_Game.tscn" type="PackedScene" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 116.041
height = 78.7637

[sub_resource type="CapsuleShape2D" id=2]
radius = 91.1118
height = 78.7637

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 300 ), Vector2( 512, 1000 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 1000 ), Vector2( 512, 300 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "change_rot_dir"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1e-05, 0.1 ), Vector2( -0.1, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1e-05, 0.1 ), Vector2( -0.1, 0.1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1e-05, 0.1 ), Vector2( -0.1, 0.1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite4:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1e-05, 0.1 ), Vector2( -0.1, 0.1 ) ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Pile" parent="." instance=ExtResource( 4 )]
position = Vector2( 512, 300 )
z_index = -1000

[node name="Players" type="Node2D" parent="."]

[node name="Player_1" parent="Players" instance=ExtResource( 5 )]
position = Vector2( -100, 0 )

[node name="RayCast2D" parent="." instance=ExtResource( 3 )]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 512, 300 )
current = true
zoom = Vector2( 1.82, 1.82 )

[node name="Wild" type="Node2D" parent="."]
position = Vector2( 512, 1000 )
z_index = -100

[node name="Sprite" type="Sprite" parent="Wild"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="r" type="Area2D" parent="Wild/Sprite"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Wild/Sprite/r"]
position = Vector2( -50, -150 )
rotation = 0.785398
shape = SubResource( 1 )

[node name="b" type="Area2D" parent="Wild/Sprite"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Wild/Sprite/b"]
position = Vector2( 200, -120 )
rotation = 0.349066
shape = SubResource( 2 )

[node name="y" type="Area2D" parent="Wild/Sprite"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Wild/Sprite/y"]
position = Vector2( -200, 120 )
rotation = 0.349066
shape = SubResource( 2 )

[node name="g" type="Area2D" parent="Wild/Sprite"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Wild/Sprite/g"]
position = Vector2( 50, 120 )
rotation = 0.785398
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Wild"]
anims/Exit = SubResource( 3 )
anims/enter = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 1.82, 1.82 )
z_index = -4096
texture = ExtResource( 6 )

[node name="Arrow" type="Node2D" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.8, 0.8 )
z_index = -2000

[node name="Sprite" type="Sprite" parent="Arrow"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 7 )
offset = Vector2( -1323, 1326 )
flip_h = true

[node name="Sprite2" type="Sprite" parent="Arrow"]
rotation = -1.5708
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 7 )
offset = Vector2( -1323, 1326 )
flip_h = true

[node name="Sprite3" type="Sprite" parent="Arrow"]
rotation = -3.14159
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 7 )
offset = Vector2( -1323, 1326 )
flip_h = true

[node name="Sprite4" type="Sprite" parent="Arrow"]
rotation = -4.71239
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 7 )
offset = Vector2( -1323, 1326 )
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Arrow"]
autoplay = "rotate_zooom"
playback_speed = -0.1
anims/change_rot_dir = SubResource( 5 )
anims/rotate_zooom = SubResource( 6 )

[node name="Reconnect" type="Button" parent="."]
visible = false
margin_left = 666.0
margin_top = 12.0
margin_right = 1004.0
margin_bottom = 75.0
focus_mode = 0
theme = ExtResource( 8 )
enabled_focus_mode = 0
text = "Reconnect..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chat" parent="." instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1095.84
margin_top = 627.0
margin_right = 1443.84
margin_bottom = 846.0
rect_scale = Vector2( 1.82, 1.82 )
rect_pivot_offset = Vector2( 348, 219 )

[node name="Control" type="Control" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
rect_scale = Vector2( 1.82, 1.82 )
rect_pivot_offset = Vector2( 512, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" parent="Control" instance=ExtResource( 10 )]
[connection signal="animation_finished" from="Arrow/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="Reconnect" to="." method="_on_Reconnect_pressed"]

[editable path="Control/Options"]
